tests/resource/valid/definition/assign_with_if.mamba
def a:= if True then 20 else 10
