tests/resource/invalid/type/definition/assign_wrong_type.mamba
def a := 20
a := 20.3
